# agent-skills-test

skills/clawsay/: SKILL.md
skills/simple-formatter-redux/: SKILL.md
skills/termcolor3/: pyproject.toml
skills/termcolor3/src/termcolor/: __init__.py
